--- a/NYC CitiBike/NYC Citi Bike.Rmd
+++ b/NYC CitiBike/NYC Citi Bike.Rmd
@@ -36,7 +36,7 @@ citi_theme <- theme(axis.text = element_text(size = 10),
 )
 ```
 
-![](../images/logo.png)
+![](images/logo.png)
 
 
 <p>Citi Bike is a New York based bike share system launched in 2013. Bikes are docked at stations across the city and can be unlocked for use via the app then returned at any other station. Citi Bike launched in 2013 with 6000 bikes in Manhattan and Brooklyn and has since expanded across the greater New York City area with hundreds more docking stations. In late 2017 the total bikes available grew to 12,000 (double from launch date) and the 50 millionith trip using the bikes was taken. Subscribers pay a monthly fee for access to the bikes including free rides of up to 45 minutes (e-bikes cost extra) while users pay for 30 minutes or a full day.</p>
@@ -56,7 +56,7 @@ This report can highlight some ways in which NYC Citi Bikes can look to expand t
 
 Data used is generated as follows from combining data from the ride with user and station data.
 
-![](../images/Process_Map.jpg)
+![](images/flow diagram 2.png)
 
 ## Data issues
 
